# miracle_nikki_information

./: .gitignore  CMakeLists.txt  data.cpp  data.h  main.cpp
base/: clothes.cpp  clothes.h  message.cpp  message.h  people.cpp  people.h
